<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/simple_border"
>
    <TextView
            android:text="@string/High_Speed_Volume_Explanation"
            android:textSize="22dp"
            android:layout_width="341dp"
            android:layout_height="89dp"
            android:layout_marginHorizontal="14dp"
            android:id="@+id/infoText"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView6"/>
    <TextView
            android:text="@string/Low_Speed_Volume_Explanation"
            android:textSize="22dp"
            android:layout_width="341dp"
            android:layout_height="142dp"
            android:id="@+id/textView6"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView7" app:layout_constraintVertical_bias="0.893"/>
    <TextView
            android:text="@string/Max_Speed_Explanation"
            android:textSize="22dp"
            android:layout_width="341dp"
            android:layout_height="117dp"
            android:id="@+id/textView7"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.964"/>
    <TextView
            android:text="@string/Minimum_Speed_Explanation"
            android:textSize="22dp"
            android:layout_width="341dp"
            android:layout_height="111dp"
            android:id="@+id/textView8"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView9" app:layout_constraintVertical_bias="0.96"/>
    <TextView
            android:text="@string/Lift_Check_Explanation"
            android:textSize="22dp"
            android:layout_width="341dp"
            android:layout_height="125dp"
            android:id="@+id/textView9"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="1.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>