<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:text="@string/Maximum_Speed_Value"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_width="100dp"
            android:layout_height="66dp"
            android:inputType="number"
            android:ems="10"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:id="@+id/maxSpeed"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.633"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.774" android:importantForAutofill="no"/>
    <TextView
            android:text="@string/Blank_Speed_Text"
            android:textSize="28sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.091" android:id="@+id/Speedtxt" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <SeekBar
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:id="@+id/VolumeBarHigh"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.274"/>
    <TextView
            android:text="@string/High_Speed_Volume"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.222" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <SeekBar
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:id="@+id/VolumeBarLow" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.405"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/Low_Speed_Volume"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LowSpeedText" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.353"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
    />
    <EditText
            android:text="@string/Minimum_Speed_Value"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_height="66dp"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:ems="10"
            android:id="@+id/minSpeed"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/maxSpeed"
            android:layout_width="100dp" app:layout_constraintHorizontal_bias="0.537"
            app:layout_constraintVertical_bias="0.628" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:importantForAutofill="no"/>
    <TextView
            android:text="@string/Minimum_Speed_Text"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.22"
            app:layout_constraintVertical_bias="0.53"/>
    <TextView
            android:text="@string/Maximum_Speed_Text"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.788" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.53" app:layout_constraintBottom_toBottomOf="parent"/>
    <CheckBox
            android:text="@string/Lift_Check_Text"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LiftCheck" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.785"/>
    <Button
            android:text="?"
            android:textSize="20sp"
            android:textAlignment="center"
            android:paddingVertical="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/helpButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.973" app:layout_constraintVertical_bias="0.014"/>
    <Button
            android:text="Options"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/optionsButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.014"
            app:layout_constraintEnd_toStartOf="@+id/helpButton"/>
    <Button
            android:text="Start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/LiftCheck" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>